# fsoft23

./: README.md
SchoolApplication/: CMakeLists.txt  main.cpp
SchoolApplication/Global Artifacts/: DM1.puml  ISEP_Airport_CD_views.puml  Practise.puml  SD_Practise.puml  SSD-1.puml  SSD-Receptionist-2.puml  SSD-test.puml  SSD1.puml  UC1.puml  UI.puml
SchoolApplication/Global Artifacts/AirportManager/: AirportManagerCreateRecept.puml  AirportManagerSeeReceptionists.puml
SchoolApplication/Global Artifacts/FlightManager/: FlightManagerListAllFlights.puml  FlightManagerSeeFlightStaff.puml
SchoolApplication/Global Artifacts/MainManager/: MainManagerRegisterAirportManager.puml  MainManagerRegisterFlightManager.puml
SchoolApplication/Global Artifacts/Receptionist/: SetBaggage.puml
SchoolApplication/Global Artifacts/SD/: SD1_Create_Airport_Manager.puml
SchoolApplication/UML/Client/: ClientSeeBookedFlights.puml  ClientSeePersonalInfo.puml
SchoolApplication/UML/FlightManager/: FlightManagerRegisterFlight.puml  FlightManagerRegisterFlightStaff.puml
SchoolApplication/UML/MainManager/: MainManagerSeeAirportManager.puml  MainManagerSeeFlightManager.puml
SchoolApplication/UML/Receptionist/: SetBaggage.puml
SchoolApplication/headers/: Circle.h  Point.h  Shape.h  pl2.h
SchoolApplication/sources/: Shape.cpp  pl2.cpp
SchoolApplicationTester/: CMakeLists.txt
